Opis podstawowych operacji funkcyjnych

--- a/Praca/magisterka.tex
+++ b/Praca/magisterka.tex
@@ -70,6 +70,8 @@ Jednym ze sposobów realizacji funkcyjnych aspektów w językach imperatywnych, 
 Domknięcie – w metodach realizacji języków programowania jest to obiekt wiążący funkcję lub referencję do funkcji oraz środowisko mające wpływ na tę funkcję w momencie jej definiowania.
 \end{theo}
 Domknięcie stanowi więc pojęcie szersze, którym można określić wszystkie implementacje pozwalające na użycie funkcji w kontekście obiektu, w paradygmacie programowania obiektowego.
+\section{Kolekcje jako strumienie danych}
+Wszystkie kolekcje, można przy przyjęciu odpowiedniego poziomu abstrakcji patrzeć jak na strumień danych. Zarówno listy jak i drzewa, poza faktem, zapewnienia struktury, dla danych w której łatwo można nimi zarządzać, stanowią często źródło, które należy zużyć. Oczywiście kolejność iteracji po poszczególnych elementach może być różna, różne może być także podejście do konieczności przejścia po wszystkich elementach. Kluczową jednak cechą jest chęć wykonania pewnej operacji na całym, bądź przefiltrowanym w jakiś sposób zbiorze danych. Podejście takie i korzyści, które z niego płynął, są główną przyczyną powstania niniejszej pracy. Tego typu rozwiązania, zaimplementowano już w wielu językach programowania. W następnych podroździałach przestawiono, sposoby implementacji tych rozwiązań.
 \section{Realizacja paradygmatu w języku JavaScript}
 \paragraph{}
 Javascript jest językiem, wieloparadygmatowym. Jednak można powiedzieć, że najistotniejsze ze składających się na sukces tego języka cech to jego \verb|zdarzeniowość| (z angielskiego \verb|event-drivent|), oraz funkcyjność. O sile javacriptu stanowi właśnie łatwość definiowania zachowań obiektów poprzez określenie funkcji mającej wykonać się w przypadku wystąpienia konkretnego zdarzenia. Obiekty opakowujące funkcje, czyli \verb|domknięcia|, dokonują \verb|przechwycenia| (z angielskiego \verb|capture|), zmiennych przez referencję. Oznacza to, że mają do nich pełen dostęp i możliwość ich modyfikacji. Koncepcja ta choć niezwykle praktyczna, może jednak powodować niekiedy problemy, kiedy jakaś nieznana deweloperowi funkcja zaczyna modyfikować jego obiekty. Specyfika wykorzystania języka powoduje czasami nieporozumienia w kontekście referencji do aktualnego obiektu, \verb|this|. Każda z funkcji definiowanych w ten sposób definiuje swój własny obiekt \verb|this|. W przypadku konstruktorów będzie to nowo utworzony obiekt. W trybie \verb|strict|; mniej łaskawym dla niejasnych instrukcji, blokującym niekture konstrukcje, traktującym część \verb|cichych| błędów, jako błędy diałnia); \verb|undefined|, czyli brak obiektu. Zaś w przypadku wykonania funkcji, jako metody konkretnego obiektu, będzie to tak zwany \verb|context object|. Tego typu zachowania, często prowadzą do błędow w rozumieniu i poprawnym pisaniu kodu. Deweloper spodziewa się, \verb|this|, będze obiektem okalającym, co nie będzie prawdą. Tego typu zachowanie, jest jednak omijane poprzez przypisanie potrzebnej wartości \verb|this| do obiektu, który będzie \verb|przechwycony| przez domknięcie.
@@ -106,11 +108,24 @@ singleParam => { statements }
 () => expression // rownowazne z: () => { return expression; }
 \end{lstlisting}
 Tego typu funkcje, rozwiazują problem niejasnego zachowania, referencji \verb|this|. Ponieważ nie definują własnego kontekstu, w ich wnętrzu odwołanie \verb|this|, zawsze określa obiekt, okalający funkcję w miejscu tworzenia. Zapewniają one także, bardziej skompresowaną konstrukcję. Są one doskonałym rozwiązaniem do funkcyjnych operacji na kolekcjach, takich jak filtrowanie czy mapowanie. Jedyną ich wadę stanowi fakt, niespójności implementacji JavaScriptu, przez różne przeglądarki. Dla przykładu Internet Explorer, nie wspiera tej konstrukcji. Do tego ze względu na różny stopień pokrycia specyfikacji ES6 przez przeglądarki, używanie tego standardu jest często niemile widziane, w produkcyjnych rozwiązaniach.
+\paragraph{}
+Od strony zagadnienia najstotniejszego w kontekście niniejszej pracy, językowi JavaScript w zasadzie niczego nie brakuje. Podstawowa klasa stanowiąca kolekcję \verb|Array|, oferuje metody obsługi przyjmujące obiekt funkcji odpowiednio aplikowany do elementów kolekcji. Dostępne są zatem między innymi operacje: \verb|filter|, \verb|map|, \verb|forEach|, \verb|reduce|, \verb|find|, \verb|every|, \verb|some|. Operacje te, występują w zasadzie w kadżdym API funkcyjnym o obsługi kolekcji. Niejednokrotnie w innej niż ta obecna w języku JavaScript formie, bądź pod innymi nazwami, jednak oferowana przez nie funkcjonalność jest w jakiś sposób dostępna. Z tego właśnie względu ważna jest wiedza na temat tego co konretnie oferują te operacje.
+\section{Opis podstawowych operacji funkcyjnych}
+\paragraph{}
+Operacja \verb|filter| polega na ograniczeniu kolekcji poprzez wyeliminowanie elementów, które nie spełniają kryterium określonego przez funkcję filtrującą. Funkcje filtrujące, czyli takie, które przyjmują jako argument, element kolekcji zaś w wyniku zwracają wartość logiczną, określającą spełnialność kryterium, zwane są predykatami. Operacja \verb|filter| jest zatem operacją przyjmującą predykat i zwracającą kolekcję, bądź obiekt pośredni w przypadku strumieni, zawierającą tylko elementy spełniające ten predykat. Przykładem takiego działania może być na przykład wyfiltrowanie tylko kobiet z listy ludzi.
+\paragraph{}
+\verb|Map| to operacja polegająca na przekształceniu, kolekcji elementów typu \verb|A| w typ \verb|B|. Do każdego elementu zbioru wejściowego, aplikowana jest funkcja, mająca zwrócić obiekt do wyjściowej kolekcji. Tak jak w przypadku operacji \verb|filter|, wynikiem jest konkretna lista, bądź obiekt przejściowy, który może być przetworzony do wynikowego zbioru danych.
+\paragraph{}
+Jeśli chodzi o operację \verb|forEach|, cechuje się ona tym, że w odróżnieniu od pozostałych, nie zwraca wartości. \verb|ForEach| jest w zasadzie, funkcyjnym wariantem pętli \verb|for|. Polega na wykonaniu instrukcji zdefiniowanych funkcją, dla każdego elementu. Operacje wykonywane przez tę operację, mogą być także wykonane przy użyciu \verb|map|. Jednakże \verb|map| zwraca wynik, co powoduje dodaktowy narzut na kreowanie obiektu wynikowego. W przypadku \verb|forEach| wyniku nie ma, zaś jedynym jej celem jest przetworzenie wszystkich elementów.
+\paragraph{}
+Operacja \verb|reduce|, polega na \verb|spłaszczeniu|, \verb|zredukowaniu| przetwarzanego zbioru. Funkcja w typ przypadku operuje na dwóch elementach kolekcji. Elemencie \verb|poprzednim|, który stanowi wynik poprzedniego wykonania funkcji (bądź pierwszy element kolekcji w przypadku pierwszego wykonania), oraz element \verb|aktualny|, czyli \verb|n + 1| obiekt, dla \verb|n| stanowiącego numer iteracji. Wynikiem jest zredukowanie parametrów funkcji, do pojedynczej wartości. Przykładem takiej operacji może być choćby sumowanie wartości listy, czy łączenie listy słów w wynikowe zdanie. Operacja ta bywa niekiedy określana jako \verb|flatten|. Jednym z wyspecjalizowanych wariantów tej metody jest \verb|joiner|, służący właśnie do łączenia listy łańcuchów znakowych, przy zastosowaniu separatora.
+\paragraph{}
+\verb|Find| znajduje pierwszy element wejściowego zbioru, który spełnia dany predykat. Zachowania w przypadku nieznalezienia elementu, są różne w zależności od konkretnego języka. Metoda ta różni się od \verb|filter|, różni się właśnie faktem przerwania procesowania po znalezieniu pierwszego rozwiązania.
+\paragraph{}
+Metody \verb|every| oraz \verb|some|, występujące także odpowiednio pod nazwami \verb|all| i \verb|any|, czy metoda przeciwna do \verb|some|, czyli \verb|none|, są metodami zwracającymi wartość logiczną. Cel tych metod jest możliwy do osiągnięcia także przy użyciu metody \verb|filter|, jednakże dla tych metod ważniejsze jest sprawdznie istnienia konkretnych elementów niż określenie, jakie elementy dane kryterium spełniają lub nie.
 \section{Realizacja paradygmatu w języku C\#}
 \section{Realizacja paradygmatu w języku Java}
 \section{Realizacja paradygmatu w języku C++}
-\section{Kolekcje jako strumienie danych}
-Wszystkie kolekcje, można przy przyjęciu odpowiedniego poziomu abstrakcji patrzeć jak na strumień danych. Zarówno listy jak i drzewa, poza faktem, zapewnienia struktury, dla danych w której łatwo można nimi zarządzać, stanowią często źródło, które należy zużyć. Oczywiście kolejność iteracji po poszczególnych elementach może być różna, różne może być także podejście do konieczności przejścia po wszystkich elementach. Kluczową jednak cechą jest chęć wykonania pewnej operacji na całym, bądź przefiltrowanym w jakiś sposób zbiorze danych. Podejście takie i korzyści, które z niego płynął, są główną przyczyną powstania niniejszej pracy.
 \chapter{Zalety programowania funkcyjnego w rozwiązaniach praktycznych}
 \section{Podstawowe problemy i zadania w programowaniu aplikacji biznesowych}
 Biznes wymaga oprogramowania. Ta kwestia nie podlega wątpliwości. Aplikacje bankowe, kasy w sklepach, giełda czy obecnie nawet telefony menadżerów, wszystkie te urządzenia i dziedziny wymagają odpowiednich programów pozwalających im wykonywać określone zadania. Popularność technologii informatycznych sprawia, że w zasadzie każda firma chcąca się rozwijać musi z tychże technologii korzystać. Czy to tworząc stronę internetową, czy monitorując pracowników, zarządzając urlopami czy katalogując zamówienia. O ile istnieją oczywiście sektory, w których od programisty wymaga się algorytmicznego myślenia, takie jak rynek procesorów, kart graficznych, badania naukowe czy związana blisko z biznesem kryptografia, to doświadczenie autora pozwala twierdzić, że więksość informatyków znajdzie zatrudnienie przy znacznie mniej wymagających zadaniach. Poziom mocy obliczeniowej obecnych komputerów pozwala nam w wielu przypadkach nie przejmować się złożonością obliczeniową czy pamięciową podejmowanych przez programy działań (oczywiście w granicach rozsądku). Do tego z poziomu biznesu, oprogramowanie jest niczym innym jak tylko kosztem. Kosztem uzasadnionym z którym się pogodzono, ale jednak kosztem. A koszta należy minimalizować, dlatego jeśli menadżer projektu stanie przed wyborem pozostawienia programisty zarabiającego pięć tysięcy złotych na miesiąc z problemem optymalizacji algorytmu, albo zakupienia szybszego procesora z trzy tysiące złotych, z radością kupi procesor i przypisze sobie zasługi oszczędzenia dwóch tysięcy. Oczywiście gdyby tego typu problemy były częste, należałby szukać programisty, który na tego typu zadanie będzie potrzebował tydzień zamiast miesiąca. Jednak w codziennej pracy tego typu problemy prawie nie występują. Deweloperzy produkują prawie seryjnie aplikacje, które z ich punktu widzenia niczym się od siebie nie różnią. Implementacja sklepu internetowego sprzedającego traktory i sklepu sprzedającego koszule, są tym samym zadaniem. Różnią się etykiety, zdjęcia i cena. Zadanie dla programisty jest jednak w obu przypadkach takie samo. 
