--- a/Praca/magisterka.tex
+++ b/Praca/magisterka.tex
@@ -124,6 +124,7 @@ Operacja \verb|reduce|, polega na \verb|spłaszczeniu|, \verb|zredukowaniu| prze
 \paragraph{}
 Metody \verb|every| oraz \verb|some|, występujące także odpowiednio pod nazwami \verb|all| i \verb|any|, czy metoda przeciwna do \verb|some|, czyli \verb|none|, są metodami zwracającymi wartość logiczną. Cel tych metod jest możliwy do osiągnięcia także przy użyciu metody \verb|filter|, jednakże dla tych metod ważniejsze jest sprawdznie istnienia konkretnych elementów niż określenie, jakie elementy dane kryterium spełniają lub nie.
 \section{Realizacja paradygmatu w języku C\#}
+Język C\# został stworzony przez firmę Microsoft. Pierwsze informacje o języku pojawiły się w roku 2000. Jednak wygodne funkcyjne programowanie, stało się w tym języku możliwe, dopiero od wersji C\# 3.0 działającej na platformie .NET Framework w wersji 3.5, wprowadzonej siedem lat później.
 \section{Realizacja paradygmatu w języku Java}
 \section{Realizacja paradygmatu w języku C++}
 \chapter{Zalety programowania funkcyjnego w rozwiązaniach praktycznych}
@@ -272,6 +273,9 @@ Pierwszy test polegał na ograniczeniu kolekcji tylko do elementów parzystych. 
 	\bibitem{lambdajssyntax}
 	MDN,
 	https://developer.mozilla.org/pl/docs/Web/JavaScript/Reference/Functions/Arrow\_functions
+	
+	\bibitem{linq}
+	http://itcraftsman.pl/zrozumiec-linq/
 
 	
 \end{thebibliography}
